1999-08-30  Federico Mena Quintero  <federico@redhat.com>

	* gnome-file-entry.c (gnome_file_entry_get_full_path): Use
	getcwd() correctly.  This really needs to be done in a portable
	fashion.  Do tilde expansion, because this thing is supposed to
	return valid pathnames.
	(tilde_expand): Stole function from mc/src/utilunix.c to do tilde
	expansion, glib-ified it.

1999-08-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_append_imlib): Made text const.

	* gnome-canvas.c (gnome_canvas_get_color): Make spec argument take
	a const char *.

Sun Aug 29 01:14:35 1999  George Lebl  <jirka@5z.com>

	* gnome-winhints.c,gnome-init.c: take out implicit initialization
	  of the atoms, and do it only when we need it. Also replaced all
	  CARD32 by long since this was being done by the preprocessor
	  anyway, and made all local Atom variables static.

1999-08-28  Havoc Pennington  <hp@pobox.com>

	* TODO: Long-overdue TODO update.

Sat Aug 28 10:32:53 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry-edit.c: fix warnings

1999-08-28  Karl Eichwalder  <ke@suse.de>

	* winhints_demo.c (about_cb): Avoid too long lines.

1999-08-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-procbar.c (gnome_proc_bar_construct): New function. 

	* gnome-pixmap-entry.c (gnome_pixmap_entry_construct): New function.

	* gnome-dock-item.c (gnome_dock_item_construct): New function.

	* gnome-file-entry.c (gnome_file_entry_construct): New function,
	per request from Guillaume.

Fri Aug 27 15:41:48 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry-edit.c: use the new gnome-dentry interface for 
	  getting the i18n lists

Fri Aug 27 10:30:10 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry-edit.[ch]: add a way to edit the translations of
	  name and comment on the advanced page

1999-08-26  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas-util.c (gnome_canvas_update_svp): Free the old
	svp.  BUGFIX:  GNOME bug tracker #1991.
